--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
     <header>
         <h1>Welcome to My Python Developer Portfolio</h1>
-        <img src="static/images/me.jpg" class="profile">
+        <img src="static/images/me.jpeg" class="profile">
         <div class="about">
             <p>I'm an undergraduate software engineering student with a passion for Python development.
             I have a strong foundation in software engineering principles and practices,
