update img style

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,7 +19,7 @@
 
     <section id="contact">
         <div class="container">
-            <img src="static/images/me.jpeg" class="profile">
+            <img src="static/images/me.png" class="profile">
             <h2>Get in Touch</h2>
             <p>If you have any inquiries or would like to discuss potential collaboration, feel free to reach out to me:</p>
             <p>Email: <a href="mailto:sohaibmaqsood63@gmail.com">sohaibmaqsood63@gmail.com</a></p>
