--- a/templates/projects.html
+++ b/templates/projects.html
@@ -35,6 +35,13 @@
                         <p>A portfolio web application developed using Flask framework.</p>
                     </div>
                 </li>
+                 <li class="dropdown">
+                    <h3>Machine Learning</h3>
+                    <div class="dropdown-content">
+                        <p>An analysis of a dataset and implementation of machine learning model on kaggle to derive insights and visualize the data.</p>
+                        <a target="_blank" href="https://www.kaggle.com/code/sohaibmaqsood/linreg-salary-prediction">Kaggle work</a>
+                    </div>
+                </li>
                 <li class="dropdown">
                     <h3>Data Analysis with Pandas</h3>
                     <div class="dropdown-content">
