--- a/templates/index.html
+++ b/templates/index.html
@@ -28,8 +28,9 @@
         </p>
         </div>
         <section id="about">
-            <h4> My skills in Python development </h4>
+
             <div class="container">
+                <div class="container" style="background-color: #bde0fe;"><h1> My skills in Python development </h1></div>
                 <h2>Web Application Development</h2>
                 <img src="static/images/html.png">
                 <img src="static/images/css.png">
