--- a/templates/projects.html
+++ b/templates/projects.html
@@ -30,44 +30,67 @@
         <div class="container">
             <ol>
                 <li class="dropdown">
-                    <h3>Web Application using Flask</h3>
+                    <a href="http://django-blog.eu-north-1.elasticbeanstalk.com/"><h3>Blog App In Django</h3></a>
+                    <a href="http://django-blog.eu-north-1.elasticbeanstalk.com/"><img src="static/images/blog.JPG" style="width: 250px; height: 220px;"></a>
+                    <div class="dropdown-content">
+                        <p>A custom blogging app built in Django</p>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="http://pythonstu.pythonanywhere.com/"><h3>Minimalistic ToDo App</h3></a>
+                    <a href="http://pythonstu.pythonanywhere.com/"><img src="static/images/todo.JPG" style="width: 250px; height: 220px;"></a>
+                    <div class="dropdown-content">
+                        <p>A minimalistic todo app in django</p>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="/"><h3>Portfolio App</h3></a>
+                    <a href="/"><img src="static/images/flask.JPG" style="width: 250px; height: 220px;"></a>
                     <div class="dropdown-content">
                         <p>A portfolio web application developed using Flask framework.</p>
                     </div>
                 </li>
                  <li class="dropdown">
-                    <h3>Machine Learning</h3>
+                    <a href="https://www.kaggle.com/code/sohaibmaqsood/linreg-salary-prediction"><h3>Machine Learning</h3></a>
+                     <a href="https://www.kaggle.com/code/sohaibmaqsood/linreg-salary-prediction"><img src="static/images/ml.JPG" style="width: 250px; height: 220px;"></a>
                     <div class="dropdown-content">
                         <p>An analysis of a dataset and implementation of machine learning model on kaggle to derive insights and visualize the data.</p>
-                        <a target="_blank" href="https://www.kaggle.com/code/sohaibmaqsood/linreg-salary-prediction">Kaggle work</a>
                     </div>
                 </li>
                 <li class="dropdown">
-                    <h3>Data Analysis with Pandas</h3>
-                    <div class="dropdown-content">
-                        <p>An analysis of a dataset using Pandas library to derive insights and visualize the data.</p>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <h3>Automation Scripts using Selenium</h3>
-                    <div class="dropdown-content">
-                        <p>An automation script built with Selenium to perform repetitive tasks in a web application.</p>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <h3>Automated Amazon price tracker</h3>
-                    <div class="dropdown-content">
-                        <p>An automation script used to track product price and send it to email automatically.</p>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <h3>Streamlit Web Apps</h3>
+                    <a href="https://chargenerator.streamlit.app/"><h3>OpenAi Web App</h3></a>
+                    <a href="https://chargenerator.streamlit.app/"><img src="static/images/char.JPG" style="width: 250px; height: 220px;" ></a>
                     <div class="dropdown-content">
                         <p>An fictional character generator.</p>
-                        <a  target="_blank" href="https://chargenerator.streamlit.app/">Character Generator</a>
-                        <p>A memory bot with login/singup authentication.</p>
-                        <a target="_blank" href="https://chatbotui.streamlit.app/">Memorybot</a>
-                        
+
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="https://chatbotui.streamlit.app/"><h3>An AI Bot with Memory</h3></a>
+                    <a href="https://chatbotui.streamlit.app/"><img src="static/images/membot.JPG" style="width: 250px; height: 220px;" ></a>
+                    <div class="dropdown-content">
+                        <p>A memory bot with login/signup authentication.</p>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <h3>Automation via SELENIUM</h3>
+                    <img src="static/images/cookieclicker.JPG" style="width: 250px; height: 220px;" >
+                    <div class="dropdown-content">
+                        <p>An automation script built to play automatically, a game called cookie-clicker</p>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <h3>A WebScraping script</h3>
+                    <img src="static/images/100mov.JPG" style="width: 250px; height: 220px;" >
+                    <div class="dropdown-content">
+                        <p>A script to scrape top 100 movies</p>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <h3>Amazon price tracker</h3>
+                    <img src="static/images/price.JPG" style="width: 250px; height: 220px;" >
+                    <div class="dropdown-content">
+                        <p>A python script to send an email to particular email-address when product price drops.</p>
                     </div>
                 </li>
             </ol>
