--- a/templates/projects.html
+++ b/templates/projects.html
@@ -30,8 +30,8 @@
         <div class="container">
             <ol>
                 <li class="dropdown">
-                    <a href="http://django-blog.eu-north-1.elasticbeanstalk.com/"><h3>Blog App In Django</h3></a>
-                    <a href="http://django-blog.eu-north-1.elasticbeanstalk.com/"><img src="static/images/blog.JPG" style="width: 250px; height: 220px;"></a>
+                    <a href="http://my-django-blog.eu-north-1.elasticbeanstalk.com/"><h3>Blog App In Django</h3></a>
+                    <a href="http://my-django-blog.eu-north-1.elasticbeanstalk.com/"><img src="static/images/blog.JPG" style="width: 250px; height: 220px;"></a>
                     <div class="dropdown-content">
                         <p>A custom blogging app built in Django</p>
                     </div>
