--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                 <img src="static/images/openai.png"> 
                 <img src="static/images/langchain.png"> 
                 <img src="static/images/huggingface.png"> 
-                <p> As a passionate Python developer, I am also fascinated by the potential of artificial intelligence and natural language processing. I have explored various models and frameworks that enable me to create innovative and intelligent applications using Python. Some of the tools that I have used are: </p> <li><b>OpenAI</b></li> <li><b>Langchain</b></li> <li><b>Hugging Face</b></li> <p> By using these tools, I have enhanced my Python development skills and expanded my horizons in the field of AI, ML and NLP. </p>
+                <p> As a passionate Python developer, I am also fascinated by the potential of artificial intelligence and natural language processing. I have explored various models and frameworks that enable me to create innovative and intelligent applications using Python. Some of the tools that I have used are: </p> OpenAI <br> Langchain <br> Hugging Face <p> By using these tools, I have enhanced my Python development skills and expanded my horizons in the field of AI, ML and NLP. </p>
                 <h2>Web Application Development</h2>
                 <img src="static/images/html.png">
                 <img src="static/images/css.png">
