--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 
             <div class="container">
                 <div class="container" style="background-color: #bde0fe;"><h1> My skills in Python development </h1></div>
-                <h2>AI, ML and Natural Language Processing</h2> 
+                <h2>AI, ML and NLP</h2> 
                 <img src="static/images/openai.png"> 
                 <img src="static/images/langchain.png"> 
                 <img src="static/images/huggingface.png"> 
